Add background position 1440px

--- a/scss/partials/_bg.scss
+++ b/scss/partials/_bg.scss
@@ -12,6 +12,7 @@ body {
   background-size: cover;
   z-index: -1;
   background-repeat: no-repeat;
+  background-position: left 50% top 50%;
 
   &::after {
     content: "";
