--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ body {
   background-size: cover;
   z-index: -1;
   background-repeat: no-repeat;
+  background-position: left 50% top 50%;
 }
 
 #bg::after {
