--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,7 @@
 @import "./partials/variables";
 @import "./partials/init";
 @import "./partials/bg";
+@import "./partials/main";
+@import "./partials/fylo";
+@import "./partials/balance";
+@import "./partials/media";
