--- a/scss/partials/_media.scss
+++ b/scss/partials/_media.scss
@@ -18,6 +18,9 @@
     }
 
     .balance {
+      .info {
+        text-align: center;
+      }
       .tooltip {
         top: 12rem;
         left: 50%;
@@ -55,5 +58,89 @@
     width: 61rem;
     height: 61rem;
     border-top-left-radius: 32%;
+  }
+}
+
+//scaling
+
+@media (min-width: 1051px) and (max-height: 278px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.9);
+  }
+}
+
+@media (min-width: 1051px) and (max-height: 240px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+}
+
+@media (min-width: 1051px) and (max-height: 216px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+}
+
+@media (max-width: 311px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.9);
+    .fylo,
+    .balance {
+      width: 115%;
+    }
+  }
+}
+
+@media (max-width: 307px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+}
+
+@media (max-width: 260px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.7);
+    .fylo,
+    .balance {
+      width: 125%;
+    }
+  }
+}
+
+@media (max-width: 1050px) and (max-height: 505px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+}
+
+@media (max-width: 1050px) and (max-height: 422px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.7);
+  }
+}
+
+@media (max-width: 1050px) and (max-height: 376px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.6);
+  }
+}
+
+@media (max-width: 1050px) and (max-height: 333px) {
+  main {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+}
+
+//info font-size
+@media (max-width: 347px) {
+  main .balance .info {
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 327px) {
+  main .balance .info {
+    font-size: 1rem;
+    transform: scale(1.2);
   }
 }
