--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -8,6 +8,7 @@ $colors: (
   veryDarkBlue: hsl(229, 57%, 11%),
   gradientFrom: hsl(6, 100%, 80%),
   gradientTo: hsl(335, 100%, 65%),
+  link: #007bff,
 );
 
 //function to get color
