--- a/scss/partials/_media.scss
+++ b/scss/partials/_media.scss
@@ -33,7 +33,7 @@
     }
   }
   #bg {
-    background-image: url("../../assets/images/bg-mobile.svg");
+    background-image: url("/assets/images/bg-mobile.svg");
     height: 100%;
     top: 0;
     &::after,
