--- a/scss/partials/_bg.scss
+++ b/scss/partials/_bg.scss
@@ -5,7 +5,7 @@ body {
 
 #bg {
   position: fixed;
-  background-image: url("/assets/images/bg-desktop.svg");
+  background-image: url("../assets/images/bg-desktop.svg");
   top: 50%;
   height: 50%;
   width: 100%;
